[gd_scene load_steps=3 format=3 uid="uid://des6l3jk04xqf"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_0xipo"]
[ext_resource type="FontFile" uid="uid://x6lpspbvcip5" path="res://Assets/fonts/joystix monospace.otf" id="1_5ltbe"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_0xipo")

[node name="Timer" type="Timer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="Timer"]
offset_right = 1152.0
offset_bottom = 648.0
size_flags_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="LabelContainer" type="HBoxContainer" parent="Timer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="PointsLabel" type="Label" parent="Timer/MarginContainer/LabelContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_5ltbe")
theme_override_font_sizes/font_size = 20
text = "0"

[node name="LivesContainer" type="HBoxContainer" parent="Timer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="CenterContainer" type="CenterContainer" parent="Timer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverLabel" type="Label" parent="Timer/MarginContainer/CenterContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.760784, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5ltbe")
theme_override_font_sizes/font_size = 40
text = "..."
